--- a/WebTechLabFinals/notification.html
+++ b/WebTechLabFinals/notification.html
@@ -70,18 +70,36 @@
             <h1 class="text-center">Notification</h1>
             <div class="col-md-4 p-4">
               <img class="img-fluid d-block rounded-circle mx-auto" src="https://pingendo.github.io/templates/sections/assets/test_meow.jpg">
-              <p>
-                <b>Room #</b>
-                <br>Senior developer</p>
-              <p class="my-4">
-                <i>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</i>
-              </p>
             </div>
             <div class="col-md-4 p-4">
-              <img class="img-fluid d-block rounded-circle mx-auto" src="https://pingendo.github.io/templates/sections/assets/test_meow.jpg"> </div>
+                <p>Name : Transient 1</p>
+                <p>Address : Mapukpukaw Street, Baguio City</p>
+                <p>Price : 1,800</p>
+                <p>Reservation Date : May 12 - 15,2018</p>
+                <p>Status : <b>Pending</b> </p>
+        </div>
+        <div class="col-md-4 p-4">
+                <a class="btn btn-lg btn-primary" disabled href="#">Proceed to Payment</a><br>
+              <a class="btn btn-lg btn-primary" href="#">Cancel Request</a>
+        </div>
+        </div>
+        <div class="row">
+            <h1 class="text-center"></h1>
             <div class="col-md-4 p-4">
-              <img class="img-fluid d-block rounded-circle mx-auto" src="https://pingendo.github.io/templates/sections/assets/test_meow.jpg"> </div>
+              <img class="img-fluid d-block rounded-circle mx-auto" src="https://pingendo.github.io/templates/sections/assets/test_meow.jpg">
+            </div>
+            <div class="col-md-4 p-4">
+                <p>Name : Transient 2</p>
+                <p>Address : Youre Road, Baguio City</p>
+                <p>Price : 1,500</p>
+                <p>Reservation Date : May 10 - 11,2018 </p>
+                <p>Status : <b> Approved</b></p>
           </div>
+        <div class="col-md-4 p-4">
+              <a class="btn btn-lg btn-primary"  href="#">Proceed to Payment</a><br>
+              <a class="btn btn-lg btn-primary" href="#">Cancel Request</a>
+        </div>
+        </div>
         </div>
         <!-- jQuery CDN -->
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
@@ -97,9 +115,6 @@
       </div>
     </div>
   </div>
-  <pingendo onclick="window.open('https://pingendo.com/', '_blank')" style="cursor:pointer;position: fixed;bottom: 10px;right:10px;padding:4px;background-color: #00b0eb;border-radius: 8px; width:250px;display:flex;flex-direction:row;align-items:center;justify-content:center;font-size:14px;color:white">Made with Pingendo Free&nbsp;&nbsp;
-    <img src="https://pingendo.com/site-assets/Pingendo_logo_big.png" class="d-block" alt="Pingendo logo" height="16">
-  </pingendo>
 </body>
 
 </html>
