--- a/Customer UI/main.html
+++ b/Customer UI/main.html
@@ -31,6 +31,10 @@
             <i class="glyphicon glyphicon-globe"></i> Notification </a>
         </li>
         <li>
+          <a href="customer.html">
+            <i class="glyphicon glyphicon-user"></i> Customer Profile </a>
+        </li>
+        <li>
           <a href="index.html">
             <i class="glyphicon glyphicon-log-out"></i> Logout </a>
         </li>
@@ -50,7 +54,7 @@
             <ul class="nav navbar-nav navbar-right">
               <li>
                 <a href="#">
-                  <i class="glyphicon glyphicon-search"></i> Search </a>
+                  <input type="text" placeholder="Search..">&nbsp;<i class="glyphicon glyphicon-search"></i></a>
               </li>
             </ul>
           </div>
@@ -60,59 +64,60 @@
         <div class="container">
           <div class="row">
             <h1 class="text-center">Available Units</h1>
-            <div class="col-md-4 p-4">
+            <div class="col-md-5 p-4">
               <img class="img-fluid d-block rounded-circle mx-auto" src="images/29468922_x.jpeg" width="300" height="200">
-              <p class="my-4">
-                <i>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</i>
-              </p>
               <p>
-                <b>Meow</b>
-                <br>Senior developer</p>
+                  <a href="room.html"><b>Azalea Residences</b></a>
+                <br>Baguio, 1.1 km to Baguio City Center</p>
+                <p>Location: &nbsp; <b>7 Leonard Wood Rd, Baguio, 2600 Benguet</b></p>       <a class="btn btn-lg btn-primary" href="#">Reserve</a> <br><br>        
             </div>
-            <div class="col-md-4 p-4">
+            <div class="col-md-5 p-4">
               <img class="img-fluid d-block rounded-circle mx-auto" src="images/137627804_x.jpeg" width="300" height="200">
-              <p class="my-4">
-                <i>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec. </i>
-              </p>
               <p>
-                <b>J. L. Fish</b>
-                <br>UI designer</p>
+                  <a href="room.html"><b>Microtel Inn and Suites by Wyndham Baguio</b></a>
+                <br>Baguio, 0.7 km to Baguio City Center</p>
+                <p>Location: &nbsp; <b>Upper Session Rd, Baguio, 2600 Benguet</b></p>
+                <a class="btn btn-lg btn-primary" href="#">Reserve</a> <br><br>
             </div>
-            <div class="col-md-4 p-4">
+            <div class="col-md-5 p-4">
               <img class="img-fluid d-block rounded-circle mx-auto" src="images/141682166_x.jpeg" width="300" height="200">
-              <p class="my-4">
-                <i>Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Cum sociis natoque penatibus et magnis dis parturient montes.</i>
-              </p>
               <p>
-                <b>Carlito</b>
-                <br>Boss</p>
+                  <a href="room.html"><b>Elizabeth Baguio</b></a>
+                <br>Baguio, 2.7 km to Baguio City Center</p>
+                <p>Location: &nbsp; <b>1 J.Felipe St, Baguio, Benguet</b></p>
+                <a class="btn btn-lg btn-primary" href="#">Reserve</a> <br><br>
             </div>
-            <div class="col-md-4 p-4">
+            <div class="col-md-5 p-4">
               <img class="img-fluid d-block rounded-circle mx-auto" src="images/196717348_x.jpeg" width="300" height="200">
-              <p class="my-4">
-                <i>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</i>
-              </p>
               <p>
-                <b>Meow</b>
-                <br>Senior developer</p>
+                  <a href="room.html"><b>The Manor At Camp John Hay</b></a>
+                <br>Baguio, 2.8 km to Baguio City Center</p>
+                <p>Location: &nbsp; <b>Camp John Hay, Ordonio Dr, Baguio, 2600 Benguet</b></p>
+                <a class="btn btn-lg btn-primary" href="#">Reserve</a> <br><br>
             </div>
-            <div class="col-md-4 p-4">
+            <div class="col-md-5 p-4">
               <img class="img-fluid d-block rounded-circle mx-auto" src="images/198934520_x.jpeg" width="300" height="200">
-              <p class="my-4">
-                <i>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec. </i>
-              </p>
               <p>
-                <b>J. L. Fish</b>
-                <br>UI designer</p>
+                  <a href="room.html"><b>Prestige - Bonbel Condominium</b></a>
+                <br>Baguio, 2.0 km to The Manor At Camp John Hay</p>
+                <p>Location: &nbsp; <b>1 Navy Base Extension Road</b></p>
+                <a class="btn btn-lg btn-primary" href="#">Reserve</a> <br><br>
             </div>
-            <div class="col-md-4 p-4">
+            <div class="col-md-5 p-4">
               <img class="img-fluid d-block rounded-circle mx-auto" src="images/201874276_x.jpeg" height="200" width="300">
-              <p class="my-4">
-                <i>Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Cum sociis natoque penatibus et magnis dis parturient montes.</i>
-              </p>
               <p>
-                <b>Carlito</b>
-                <br>Boss</p>
+                  <a href="room.html"><b>La Casa Bianca</b></a>
+                <br>Baguio, 1.9 km to The Manor At Camp John Hay</p>
+                <p>Location: &nbsp; <b>Leonard Wood Rd, Baguio, Benguet</b></p>
+                <a class="btn btn-lg btn-primary" href="#">Reserve</a> <br><br>
+            </div>
+            <div class="col-md-5 p-4">
+              <img class="img-fluid d-block rounded-circle mx-auto" src="images/198939004_x.jpeg" height="200" width="300">
+              <p>
+                  <a href="room.html"><b>Mountain Lodge</b></a>
+                <br>Baguio, 1.5 km to Baguio City Center</p>
+                <p>Location: &nbsp; <b>27 Leonard Wood Road, Baguio, Benguet, Philippines</b></p>
+                <a class="btn btn-lg btn-primary" href="#">Reserve</a> <br>
             </div>
             <div class="py-5">
               <div class="container">
