--- a/Customer UI/transaction.html
+++ b/Customer UI/transaction.html
@@ -27,8 +27,14 @@
         <li>
           <a href="transaction.html">
             <i class="glyphicon glyphicon-transfer"></i> Transaction </a>
+        </li>
+        <li>
           <a href="notification.html">
             <i class="glyphicon glyphicon-globe"></i> Notification </a>
+        </li>
+        <li>
+          <a href="customer.html">
+            <i class="glyphicon glyphicon-user"></i> Customer Profile </a>
         </li>
         <li>
           <a href="index.html">
@@ -82,9 +88,6 @@
       </div>
     </div>
   </div>
-  <pingendo onclick="window.open('https://pingendo.com/', '_blank')" style="cursor:pointer;position: fixed;bottom: 10px;right:10px;padding:4px;background-color: #00b0eb;border-radius: 8px; width:250px;display:flex;flex-direction:row;align-items:center;justify-content:center;font-size:14px;color:white">Made with Pingendo Free&nbsp;&nbsp;
-    <img src="https://pingendo.com/site-assets/Pingendo_logo_big.png" class="d-block" alt="Pingendo logo" height="16">
-  </pingendo>
 </body>
 
 </html>
