--- a/Customer UI/room.html
+++ b/Customer UI/room.html
@@ -27,8 +27,14 @@
         <li>
           <a href="transaction.html">
             <i class="glyphicon glyphicon-transfer"></i> Transaction </a>
+        </li>
+        <li>
           <a href="notification.html">
             <i class="glyphicon glyphicon-globe"></i> Notification </a>
+        </li>
+        <li>
+          <a href="customer.html">
+            <i class="glyphicon glyphicon-user"></i> Customer Profile </a>
         </li>
         <li>
           <a href="index.html">
@@ -58,8 +64,8 @@
       </nav>
       <div class="container">
         <div class="row">
-          <div class="col-xl-12">
-            <a href="#">
+          <div class="col-lg-12 col-xl-12 col-md-12">
+            <a href="main.html">
               <i class="glyphicon glyphicon-circle-arrow-left"></i> Back </a>
           </div>
         </div>
@@ -67,28 +73,37 @@
       <div class="py-5 bg-light mr-auto w-25">
         <div class="container">
           <div class="row">
-            <h1 class="text-center">Customer Information</h1>
+            <h1 class="text-center">Mountain Lodge</h1>
             <div class="col-md-4 p-4">
-              <img class="img-fluid d-block rounded-circle mx-auto" src="https://pingendo.github.io/templates/sections/assets/test_meow.jpg">
-              <p>
-                <b>Room #</b>
-                <br>Senior developer</p>
-              <p class="my-4">
-                <i>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</i>
-              </p>
-            </div>
+              <img class="img-fluid d-block rounded-circle mx-auto" src="images/lodge 1.jpeg" height="200"> </div>
             <div class="col-md-4 p-4">
-              <img class="img-fluid d-block rounded-circle mx-auto" src="https://pingendo.github.io/templates/sections/assets/test_meow.jpg"> </div>
+              <img class="img-fluid d-block rounded-circle mx-auto" src="images/lodge 2.jpeg" height="200"> </div>
             <div class="col-md-4 p-4">
-              <img class="img-fluid d-block rounded-circle mx-auto" src="https://pingendo.github.io/templates/sections/assets/test_meow.jpg"> </div>
+              <img class="img-fluid d-block rounded-circle mx-auto" src="images/lodge 3.jpeg" height="200"> </div>
           </div>
-        </div>
-        <div class="py-5">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-12">
-                <a class="btn btn-primary" href="#"> Next </a>
-              </div>
+          <div class="row">
+            <h1 class="text-center"></h1>
+            <div class="col-md-4 p-4">
+              <img class="img-fluid d-block rounded-circle mx-auto" src="images/lodge 3.jpeg" height="200"> </div>
+            <div class="col-md-4 p-4">
+              <img class="img-fluid d-block rounded-circle mx-auto" src="images/lodge 5.jpeg" height="200" width="360"> </div>
+            <div class="col-md-4 p-4">
+              <img class="img-fluid d-block rounded-circle mx-auto" src="images/lodge 6.jpeg" height="200" width="360"> </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12">
+              <p class="text-dark text-left">Surrounded by lush tropical trees in Baguio, Mountain Lodge and Restaurant is a ten-minute walk from the sprawling Baguio Botanical Garden. This homey property boasts a private flowery garden with seating areas, free private parking, and
+                a multi-cuisine restaurant.
+                <br>All rooms are ventilated by ceiling fans, and come with private or shared bathrooms. Upgraded rooms have cable TVs, safes, and sitting areas. Free basic toiletries are provided.
+                <br>
+                <br>&nbsp; Mountain Lodge and Restaurant features a charming lobby lounge with a fireplace overlooking the scenic forest reserves of the Teacher's Camp. Local tour arrangements, luggage storage, and laundry service are also offered. Wi-Fi
+                access is free of charge.&nbsp;
+                <br>
+                <br>Serving home-cooked meals for all-day dining, the on-site restaurant offers Filipino and Pan-Asian dishes coupled with lovely views of the garden. Rose Bowl, a famous restaurant that specialises in Chinese cuisine, is only a five-minute
+                walk away.
+                <br>
+                <br>SM City Baguio shopping mall and the picturesque Burnham Park are less than two kilometres from the lodge.</p>
+              <a class="btn btn-lg btn-primary" href="#">Reserve</a>
             </div>
           </div>
         </div>
@@ -106,9 +121,6 @@
       </div>
     </div>
   </div>
-  <pingendo onclick="window.open('https://pingendo.com/', '_blank')" style="cursor:pointer;position: fixed;bottom: 10px;right:10px;padding:4px;background-color: #00b0eb;border-radius: 8px; width:250px;display:flex;flex-direction:row;align-items:center;justify-content:center;font-size:14px;color:white">Made with Pingendo Free&nbsp;&nbsp;
-    <img src="https://pingendo.com/site-assets/Pingendo_logo_big.png" class="d-block" alt="Pingendo logo" height="16">
-  </pingendo>
 </body>
 
 </html>
