Fixed Customer UI

--- a/Customer UI/main.html
+++ b/Customer UI/main.html
@@ -42,7 +42,7 @@
     </nav>
     <!-- Page Content Holder -->
     <div id="content">
-      <nav class="navbar navbar-default">
+      <nav class="navbar navbar-default w-50">
         <div class="container-fluid">
           <div class="navbar-header">
             <button type="button" id="sidebarCollapse" class="btn btn-info navbar-btn">
@@ -67,57 +67,58 @@
             <div class="col-md-5 p-4">
               <img class="img-fluid d-block rounded-circle mx-auto" src="images/29468922_x.jpeg" width="300" height="200">
               <p>
-                  <a href="room.html"><b>Azalea Residences</b></a>
+                  <b>Azalea Residences</b>
                 <br>Baguio, 1.1 km to Baguio City Center</p>
-                <p>Location: &nbsp; <b>7 Leonard Wood Rd, Baguio, 2600 Benguet</b></p>       <a class="btn btn-lg btn-primary" href="#">Reserve</a> <br><br>        
+                <p>Location: &nbsp; <b>7 Leonard Wood Rd, Baguio, 2600 Benguet</b></p>       
+                <a class="btn btn-lg btn-primary" href="room.html">View Unit</a> <br><br>        
             </div>
             <div class="col-md-5 p-4">
               <img class="img-fluid d-block rounded-circle mx-auto" src="images/137627804_x.jpeg" width="300" height="200">
               <p>
-                  <a href="room.html"><b>Microtel Inn and Suites by Wyndham Baguio</b></a>
+                  <b>Microtel Inn and Suites by Wyndham Baguio</b>
                 <br>Baguio, 0.7 km to Baguio City Center</p>
                 <p>Location: &nbsp; <b>Upper Session Rd, Baguio, 2600 Benguet</b></p>
-                <a class="btn btn-lg btn-primary" href="#">Reserve</a> <br><br>
+                <a class="btn btn-lg btn-primary" href="room.html">View Unit</a> <br><br>        
             </div>
             <div class="col-md-5 p-4">
               <img class="img-fluid d-block rounded-circle mx-auto" src="images/141682166_x.jpeg" width="300" height="200">
               <p>
-                  <a href="room.html"><b>Elizabeth Baguio</b></a>
+                  <b>Elizabeth Baguio</b>
                 <br>Baguio, 2.7 km to Baguio City Center</p>
                 <p>Location: &nbsp; <b>1 J.Felipe St, Baguio, Benguet</b></p>
-                <a class="btn btn-lg btn-primary" href="#">Reserve</a> <br><br>
+                <a class="btn btn-lg btn-primary" href="room.html">View Unit</a> <br><br>        
             </div>
             <div class="col-md-5 p-4">
               <img class="img-fluid d-block rounded-circle mx-auto" src="images/196717348_x.jpeg" width="300" height="200">
               <p>
-                  <a href="room.html"><b>The Manor At Camp John Hay</b></a>
+                  <b>The Manor At Camp John Hay</b>
                 <br>Baguio, 2.8 km to Baguio City Center</p>
                 <p>Location: &nbsp; <b>Camp John Hay, Ordonio Dr, Baguio, 2600 Benguet</b></p>
-                <a class="btn btn-lg btn-primary" href="#">Reserve</a> <br><br>
+                <a class="btn btn-lg btn-primary" href="room.html">View Unit</a> <br><br>        
             </div>
             <div class="col-md-5 p-4">
               <img class="img-fluid d-block rounded-circle mx-auto" src="images/198934520_x.jpeg" width="300" height="200">
               <p>
-                  <a href="room.html"><b>Prestige - Bonbel Condominium</b></a>
+                  <b>Prestige - Bonbel Condominium</b>
                 <br>Baguio, 2.0 km to The Manor At Camp John Hay</p>
                 <p>Location: &nbsp; <b>1 Navy Base Extension Road</b></p>
-                <a class="btn btn-lg btn-primary" href="#">Reserve</a> <br><br>
+                <a class="btn btn-lg btn-primary" href="room.html">View Unit</a> <br><br>        
             </div>
             <div class="col-md-5 p-4">
               <img class="img-fluid d-block rounded-circle mx-auto" src="images/201874276_x.jpeg" height="200" width="300">
               <p>
-                  <a href="room.html"><b>La Casa Bianca</b></a>
+                  <b>La Casa Bianca</b>
                 <br>Baguio, 1.9 km to The Manor At Camp John Hay</p>
                 <p>Location: &nbsp; <b>Leonard Wood Rd, Baguio, Benguet</b></p>
-                <a class="btn btn-lg btn-primary" href="#">Reserve</a> <br><br>
+                <a class="btn btn-lg btn-primary" href="room.html">View Unit</a> <br><br>        
             </div>
             <div class="col-md-5 p-4">
               <img class="img-fluid d-block rounded-circle mx-auto" src="images/198939004_x.jpeg" height="200" width="300">
               <p>
-                  <a href="room.html"><b>Mountain Lodge</b></a>
+                  <b>Mountain Lodge</b>
                 <br>Baguio, 1.5 km to Baguio City Center</p>
                 <p>Location: &nbsp; <b>27 Leonard Wood Road, Baguio, Benguet, Philippines</b></p>
-                <a class="btn btn-lg btn-primary" href="#">Reserve</a> <br>
+                <a class="btn btn-lg btn-primary" href="room.html">View Unit</a> <br><br>        
             </div>
             <div class="py-5">
               <div class="container">
