--- a/Customer UI/notification.html
+++ b/Customer UI/notification.html
@@ -31,6 +31,10 @@
             <i class="glyphicon glyphicon-globe"></i> Notification </a>
         </li>
         <li>
+          <a href="customer.html">
+            <i class="glyphicon glyphicon-user"></i> Customer Profile </a>
+        </li>
+        <li>
           <a href="index.html">
             <i class="glyphicon glyphicon-log-out"></i> Logout </a>
         </li>
