--- a/Customer UI/room.html
+++ b/Customer UI/room.html
@@ -119,6 +119,57 @@
                    });
         </script>
       </div>
+    <div class="bg-light text-white" id="footer">
+        <div class="container">
+          <div class="row">
+            <div class="p-4 col-md-3">
+              <h2 class="mb-4 text-secondary">ABOUT HOMESEEK</h2>
+              <p class="text-white">A website for renting any house and transients and can view and reserve where you want to stay or live.</p>
+            </div>
+            <div class="p-4 col-md-3">
+              <h2 class="mb-4 text-secondary">MAPSITE</h2>
+              <ul class="list-unstyled">
+                <a href="#" class="text-white">Home</a>
+                <br>
+                <a href="transaction.html" class="text-white">Transaction</a>
+                <br>
+                <a href="notification.html" class="text-white">Notification</a>
+                <br>
+                <a href="customer.html" class="text-white">Customer</a>
+              </ul>
+            </div>
+            <div class="p-4 col-md-3">
+              <h2 class="mb-4">CONTACT</h2>
+              <p>
+                <a href="tel:+246 - 542 550 5462" class="text-white">
+                  <i class="fa d-inline mr-3 text-secondary fa-phone"></i>+246 - 542 550 5462</a>
+              </p>
+              <p>
+                <a href="mailto:info@pingendo.com" class="text-white">
+                  <i class="fa d-inline mr-3 text-secondary fa-envelope-o"></i>info@pingendo.com</a>
+              </p>
+              <p>
+                <a href="https://goo.gl/maps/AUq7b9W7yYJ2" class="text-white" target="_blank">
+                  <i class="fa d-inline mr-3 fa-map-marker text-secondary"></i>365 Park Street, NY</a>
+              </p>
+            </div>
+            <div class="p-4 col-md-3">
+              <h2 class="mb-4 text-light">SUBSCRIBE</h2>
+              <form>
+                <fieldset class="form-group text-white">
+                  <label for="exampleInputEmail1">Get our newsletter</label>
+                  <input type="email" class="form-control" placeholder="Enter email"> </fieldset>
+                <button type="submit" class="btn btn-outline-secondary">Submit</button>
+              </form>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12 mt-3">
+              <p class="text-center text-white">© Copyright 2018 Group 3 WebtechLab - All rights reserved.</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </body>
