--- a/Customer UI/index.html
+++ b/Customer UI/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Homeseek - Login</title>
   <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" href="css/theme.css" type="text/css"> </head>
 
