--- a/Customer UI/main.html
+++ b/Customer UI/main.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Homeseek</title>
+  <title>Homeseek - Home</title>
   <!-- Bootstrap CSS CDN -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <!-- Our Custom CSS -->
@@ -27,7 +27,7 @@
         <li>
           <a href="transaction.html">
             <i class="glyphicon glyphicon-transfer"></i> Transaction </a>
-          <a href=notification.html>
+          <a href="notification.html">
             <i class="glyphicon glyphicon-globe"></i> Notification </a>
         </li>
         <li>
@@ -54,7 +54,9 @@
             <ul class="nav navbar-nav navbar-right">
               <li>
                 <a href="#">
-                  <input type="text" placeholder="Search..">&nbsp;<i class="glyphicon glyphicon-search"></i></a>
+                  <input type="text" placeholder="Search..">&nbsp;
+                  <i class="glyphicon glyphicon-search"></i>
+                </a>
               </li>
             </ul>
           </div>
@@ -67,59 +69,80 @@
             <div class="col-md-5 p-4">
               <img class="img-fluid d-block rounded-circle mx-auto" src="images/29468922_x.jpeg" width="300" height="200">
               <p>
-                  <b>Azalea Residences</b>
+                <b>Azalea Residences</b>
                 <br>Baguio, 1.1 km to Baguio City Center</p>
-                <p>Location: &nbsp; <b>7 Leonard Wood Rd, Baguio, 2600 Benguet</b></p>       
-                <a class="btn btn-lg btn-primary" href="room.html">View Unit</a> <br><br>        
-            </div>
+              <p>Location: &nbsp;
+                <b>7 Leonard Wood Rd, Baguio, 2600 Benguet</b>
+              </p>
+              <a class="btn btn-lg btn-primary" href="room.html">View Unit</a>
+              <br>
+              <br> </div>
             <div class="col-md-5 p-4">
               <img class="img-fluid d-block rounded-circle mx-auto" src="images/137627804_x.jpeg" width="300" height="200">
               <p>
-                  <b>Microtel Inn and Suites by Wyndham Baguio</b>
+                <b>Microtel Inn and Suites by Wyndham Baguio</b>
                 <br>Baguio, 0.7 km to Baguio City Center</p>
-                <p>Location: &nbsp; <b>Upper Session Rd, Baguio, 2600 Benguet</b></p>
-                <a class="btn btn-lg btn-primary" href="room.html">View Unit</a> <br><br>        
-            </div>
+              <p>Location: &nbsp;
+                <b>Upper Session Rd, Baguio, 2600 Benguet</b>
+              </p>
+              <a class="btn btn-lg btn-primary" href="room.html">View Unit</a>
+              <br>
+              <br> </div>
             <div class="col-md-5 p-4">
               <img class="img-fluid d-block rounded-circle mx-auto" src="images/141682166_x.jpeg" width="300" height="200">
               <p>
-                  <b>Elizabeth Baguio</b>
+                <b>Elizabeth Baguio</b>
                 <br>Baguio, 2.7 km to Baguio City Center</p>
-                <p>Location: &nbsp; <b>1 J.Felipe St, Baguio, Benguet</b></p>
-                <a class="btn btn-lg btn-primary" href="room.html">View Unit</a> <br><br>        
-            </div>
+              <p>Location: &nbsp;
+                <b>1 J.Felipe St, Baguio, Benguet</b>
+              </p>
+              <a class="btn btn-lg btn-primary" href="room.html">View Unit</a>
+              <br>
+              <br> </div>
             <div class="col-md-5 p-4">
               <img class="img-fluid d-block rounded-circle mx-auto" src="images/196717348_x.jpeg" width="300" height="200">
               <p>
-                  <b>The Manor At Camp John Hay</b>
+                <b>The Manor At Camp John Hay</b>
                 <br>Baguio, 2.8 km to Baguio City Center</p>
-                <p>Location: &nbsp; <b>Camp John Hay, Ordonio Dr, Baguio, 2600 Benguet</b></p>
-                <a class="btn btn-lg btn-primary" href="room.html">View Unit</a> <br><br>        
-            </div>
+              <p>Location: &nbsp;
+                <b>Camp John Hay, Ordonio Dr, Baguio, 2600 Benguet</b>
+              </p>
+              <a class="btn btn-lg btn-primary" href="room.html">View Unit</a>
+              <br>
+              <br> </div>
             <div class="col-md-5 p-4">
               <img class="img-fluid d-block rounded-circle mx-auto" src="images/198934520_x.jpeg" width="300" height="200">
               <p>
-                  <b>Prestige - Bonbel Condominium</b>
+                <b>Prestige - Bonbel Condominium</b>
                 <br>Baguio, 2.0 km to The Manor At Camp John Hay</p>
-                <p>Location: &nbsp; <b>1 Navy Base Extension Road</b></p>
-                <a class="btn btn-lg btn-primary" href="room.html">View Unit</a> <br><br>        
-            </div>
+              <p>Location: &nbsp;
+                <b>1 Navy Base Extension Road</b>
+              </p>
+              <a class="btn btn-lg btn-primary" href="room.html">View Unit</a>
+              <br>
+              <br> </div>
             <div class="col-md-5 p-4">
               <img class="img-fluid d-block rounded-circle mx-auto" src="images/201874276_x.jpeg" height="200" width="300">
               <p>
-                  <b>La Casa Bianca</b>
+                <b>La Casa Bianca</b>
                 <br>Baguio, 1.9 km to The Manor At Camp John Hay</p>
-                <p>Location: &nbsp; <b>Leonard Wood Rd, Baguio, Benguet</b></p>
-                <a class="btn btn-lg btn-primary" href="room.html">View Unit</a> <br><br>        
-            </div>
+              <p>Location: &nbsp;
+                <b>Leonard Wood Rd, Baguio, Benguet</b>
+              </p>
+              <a class="btn btn-lg btn-primary" href="room.html">View Unit</a>
+              <br>
+              <br> </div>
             <div class="col-md-5 p-4">
               <img class="img-fluid d-block rounded-circle mx-auto" src="images/198939004_x.jpeg" height="200" width="300">
               <p>
-                  <b>Mountain Lodge</b>
+                <b>Mountain Lodge</b>
                 <br>Baguio, 1.5 km to Baguio City Center</p>
-                <p>Location: &nbsp; <b>27 Leonard Wood Road, Baguio, Benguet, Philippines</b></p>
-                <a class="btn btn-lg btn-primary" href="room.html">View Unit</a> <br><br>        
-            </div>
+              <p>Location: &nbsp;
+                <b>27 Leonard Wood Road, Baguio, Benguet, Philippines</b>
+              </p>
+              <a class="btn btn-lg btn-primary" href="room.html">View Unit</a>
+              <br>
+              <br> </div>
             <div class="py-5">
               <div class="container">
                 <div class="row">
@@ -168,9 +191,59 @@
                    });
         </script>
       </div>
+      <div class="bg-light text-white" id="footer">
+        <div class="container">
+          <div class="row">
+            <div class="p-4 col-md-3">
+              <h2 class="mb-4 text-secondary">ABOUT HOMESEEK</h2>
+              <p class="text-white">A website for renting a list of houses and transients available which you can view and reserve where you want to stay or live.</p>
+            </div>
+            <div class="p-4 col-md-3">
+              <h2 class="mb-4 text-secondary">MAPSITE</h2>
+              <ul class="list-unstyled">
+                <a href="#" class="text-white">Home</a>
+                <br>
+                <a href="transaction.html" class="text-white">Transaction</a>
+                <br>
+                <a href="notification.html" class="text-white">Notification</a>
+                <br>
+                <a href="customer.html" class="text-white">Customer</a>
+              </ul>
+            </div>
+            <div class="p-4 col-md-3">
+              <h2 class="mb-4">CONTACT</h2>
+              <p>
+                <a href="tel:+246 - 542 550 5462" class="text-white">
+                  <i class="fa d-inline mr-3 text-secondary fa-phone"></i>+246 - 542 550 5462</a>
+              </p>
+              <p>
+                <a href="mailto:info@pingendo.com" class="text-white">
+                  <i class="fa d-inline mr-3 text-secondary fa-envelope-o"></i>info@pingendo.com</a>
+              </p>
+              <p>
+                <a href="https://goo.gl/maps/AUq7b9W7yYJ2" class="text-white" target="_blank">
+                  <i class="fa d-inline mr-3 fa-map-marker text-secondary"></i>365 Park Street, NY</a>
+              </p>
+            </div>
+            <div class="p-4 col-md-3">
+              <h2 class="mb-4 text-light">SUBSCRIBE</h2>
+              <form>
+                <fieldset class="form-group text-white">
+                  <label for="exampleInputEmail1">Get our newsletter</label>
+                  <input type="email" class="form-control" placeholder="Enter email"> </fieldset>
+                <button type="submit" class="btn btn-outline-secondary">Submit</button>
+              </form>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12 mt-3">
+              <p class="text-center text-white">© Copyright 2018 Group 3 WebtechLab - All rights reserved.</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-
 </body>
 
 </html>
