--- a/ServiceProvider UI/room.html
+++ b/ServiceProvider UI/room.html
@@ -20,21 +20,21 @@
         <strong>HS</strong>
       </div>
       <ul class="list-unstyled components">
-        <li class="active">
+        <li>
           <a href="main.html">
             <i class="glyphicon glyphicon-home"></i> Home </a>
         </li>
         <li>
-          <a href="transaction.html">
-            <i class="glyphicon glyphicon-transfer"></i> Transaction </a>
+          <a href="services.html">
+            <i class="glyphicon glyphicon-plus"></i> Post Services </a>
+        </li>
+        <li class="active">
+          <a href=reservations.html>
+            <i class="glyphicon glyphicon-book"></i> Reservations </a>
         </li>
         <li>
-          <a href="notification.html">
-            <i class="glyphicon glyphicon-globe"></i> Notification </a>
-        </li>
-        <li>
-          <a href="customer.html">
-            <i class="glyphicon glyphicon-user"></i> Customer Profile </a>
+          <a href="transactions.html">
+            <i class="glyphicon glyphicon-qrcode"></i> Transactions </a>
         </li>
         <li>
           <a href="index.html">
