Updated UI for Service Provider

--- a/ServiceProvider UI/reservations.html
+++ b/ServiceProvider UI/reservations.html
@@ -99,7 +99,7 @@
                 <p>Address : Youre Road, Baguio City</p>
                 <p>Price : 1,500</p>
                 <p>Reservation Date : May 10 - 11,2018 </p>
-                <p>Status : <b> Approved</b></p>
+                <p>Status : <b> Pending </b></p>
           </div>
         <div class="col-md-4 p-4">
               <a class="btn btn-lg btn-success"  href="#">Allow</a><br>
