--- a/ServiceProvider UI/services.html
+++ b/ServiceProvider UI/services.html
@@ -76,23 +76,35 @@
             <div class="row">
             <form>
               <div class="form-group">
-                <label for="inputName">Name</label>
-                <input type="name" class="form-control" id="inputName" aria-describedby="emailHelp" placeholder="Enter email">
-              </div>
+                  <label for="inputName">Name</label>
               <div class="form-row">
-                <label for="inputName">Location</label>
-                <div class="col" id="inputName">
+                <div class="col-sm-6" id="inputName">
+                  <input type="text" class="form-control" placeholder="Last Name">
+                </div>
+                <div class="col-sm-6">
+                  <input type="text" class="form-control" placeholder="First Name">
+                </div>
+              </div>   
+              </div>
+              <div class="form-group">
+                  <label for="inputLocation">Location</label>
+              <div class="form-row">
+                <div class="col-sm-2" id="inputLocation">
                   <input type="text" class="form-control" placeholder="House Number">
                 </div>
-                <div class="col">
+                <div class="col-sm-5">
                   <input type="text" class="form-control" placeholder="Barangay">
                 </div>
-                <div class="col">
+                <div class="col-sm-5">
                   <input type="text" class="form-control" placeholder="City">
                 </div>
               </div>
+              </div>
               <div class="form-group">
+                  <div class="form-row">
                 <label for="distanceFromCenter">Distance from Baguio City Center</label>
+                  </div> 
+                  <div class="col-sm-7">
                 <select class="form-control" id="distanceFromCenter">
                   <option>1</option>
                   <option>2</option>
@@ -100,15 +112,25 @@
                   <option>4</option>
                   <option>5</option>
                 </select>
-                <label for="distanceFromCenter">km</label>
               </div>
-              <div class="custom-file">
-                  <label class="custom-file-label" for="customFile">Upload service images</label>
-                  <input type="file" class="custom-file-input" id="customFile">
-              </div>
+            </div>
+              <div class="form-group">
+                <div class="form-row">
+                <label class="control-label">
+                   Attach image/s for the service
+                </label>
+                  </div>
+                <div class="col-sm-10">
+                    <span class="btn btn-default btn-file">
+                        <input id="input-2" name="input2[]" type="file" class="file" multiple data-show-upload="true" data-show-caption="true">
+                    </span>
+                </div>
+            </div>
+              <div class="form-group">
               <div class="form-check">
                 <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">I agree</label>
+                <label class="form-check-label" for="exampleCheck1">I agree with the terms and conditions</label>
+              </div>
               </div>
               <button type="submit" class="btn btn-primary">Submit</button>
             </form>
