--- a/Customer UI/main.html
+++ b/Customer UI/main.html
@@ -45,9 +45,8 @@
       <nav class="navbar navbar-default w-50">
         <div class="container-fluid">
           <div class="navbar-header">
-            <button type="button" id="sidebarCollapse" class="btn btn-info navbar-btn">
-              <i class="glyphicon glyphicon-align-left"></i>
-              <span>Toggle Sidebar</span>
+            <button type="button" id="sidebarCollapse" class="btn btn-primary navbar-btn">
+              <i class="glyphicon glyphicon-menu-hamburger"></i>
             </button>
           </div>
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -65,132 +64,98 @@
       <div class="py-5 bg-light mr-auto w-25">
         <div class="container">
           <div class="row">
-            <h1 class="text-center">Available Units</h1>
-            <div class="col-md-5 p-4">
+            <h1 class="text-center text-uppercase text-primary">Available Units</h1>
+            <div class="col-md-4 p-3">
               <img class="img-fluid d-block rounded-circle mx-auto" src="images/29468922_x.jpeg" width="300" height="200">
               <p>
                 <b>Azalea Residences</b>
                 <br>Baguio, 1.1 km to Baguio City Center</p>
               <p>Location: &nbsp;
                 <b>7 Leonard Wood Rd, Baguio, 2600 Benguet</b>
-              </p>
-              <a class="btn btn-lg btn-primary" href="room.html">View Unit</a>
+                <br> Price: &nbsp; </p>
+              <a class="btn btn-lg btn-primary" href="reserve.html">Reserve/Avail</a>
               <br>
               <br> </div>
-            <div class="col-md-5 p-4">
+            <div class="col-md-4 p-3">
               <img class="img-fluid d-block rounded-circle mx-auto" src="images/137627804_x.jpeg" width="300" height="200">
               <p>
                 <b>Microtel Inn and Suites by Wyndham Baguio</b>
                 <br>Baguio, 0.7 km to Baguio City Center</p>
               <p>Location: &nbsp;
                 <b>Upper Session Rd, Baguio, 2600 Benguet</b>
-              </p>
-              <a class="btn btn-lg btn-primary" href="room.html">View Unit</a>
+                <br> Price: &nbsp; </p>
+              <a class="btn btn-lg btn-primary" href="reserve.html">Reserve/Avail</a>
               <br>
               <br> </div>
-            <div class="col-md-5 p-4">
-              <img class="img-fluid d-block rounded-circle mx-auto" src="images/141682166_x.jpeg" width="300" height="200">
+            <div class="col-md-4 p-3">
+              <img class="img-fluid d-block rounded-circle mx-auto" src="images/141682166_x.jpeg" height="200" width="300">
               <p>
                 <b>Elizabeth Baguio</b>
                 <br>Baguio, 2.7 km to Baguio City Center</p>
               <p>Location: &nbsp;
                 <b>1 J.Felipe St, Baguio, Benguet</b>
-              </p>
-              <a class="btn btn-lg btn-primary" href="room.html">View Unit</a>
+                <br> Price: &nbsp; </p>
+              <a class="btn btn-lg btn-primary" href="reserve.html">Reserve/Avail</a>
               <br>
               <br> </div>
-            <div class="col-md-5 p-4">
-              <img class="img-fluid d-block rounded-circle mx-auto" src="images/196717348_x.jpeg" width="300" height="200">
-              <p>
-                <b>The Manor At Camp John Hay</b>
-                <br>Baguio, 2.8 km to Baguio City Center</p>
-              <p>Location: &nbsp;
-                <b>Camp John Hay, Ordonio Dr, Baguio, 2600 Benguet</b>
-              </p>
-              <a class="btn btn-lg btn-primary" href="room.html">View Unit</a>
-              <br>
-              <br> </div>
-            <div class="col-md-5 p-4">
-              <img class="img-fluid d-block rounded-circle mx-auto" src="images/198934520_x.jpeg" width="300" height="200">
-              <p>
-                <b>Prestige - Bonbel Condominium</b>
-                <br>Baguio, 2.0 km to The Manor At Camp John Hay</p>
-              <p>Location: &nbsp;
-                <b>1 Navy Base Extension Road</b>
-              </p>
-              <a class="btn btn-lg btn-primary" href="room.html">View Unit</a>
-              <br>
-              <br> </div>
-            <div class="col-md-5 p-4">
-              <img class="img-fluid d-block rounded-circle mx-auto" src="images/201874276_x.jpeg" height="200" width="300">
-              <p>
-                <b>La Casa Bianca</b>
-                <br>Baguio, 1.9 km to The Manor At Camp John Hay</p>
-              <p>Location: &nbsp;
-                <b>Leonard Wood Rd, Baguio, Benguet</b>
-              </p>
-              <a class="btn btn-lg btn-primary" href="room.html">View Unit</a>
-              <br>
-              <br> </div>
-            <div class="col-md-5 p-4">
-              <img class="img-fluid d-block rounded-circle mx-auto" src="images/198939004_x.jpeg" height="200" width="300">
-              <p>
-                <b>Mountain Lodge</b>
-                <br>Baguio, 1.5 km to Baguio City Center</p>
-              <p>Location: &nbsp;
-                <b>27 Leonard Wood Road, Baguio, Benguet, Philippines</b>
-              </p>
-              <a class="btn btn-lg btn-primary" href="room.html">View Unit</a>
-              <br>
-              <br> </div>
-            <div class="py-5">
-              <div class="container">
-                <div class="row">
-                  <div class="col-md-12 ml-auto">
-                    <ul class="pagination">
-                      <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Previous">
-                          <span aria-hidden="true">«</span>
-                          <span class="sr-only">Previous</span>
-                        </a>
-                      </li>
-                      <li class="page-item">
-                        <a class="page-link" href="#">1</a>
-                      </li>
-                      <li class="page-item">
-                        <a class="page-link" href="#">2</a>
-                      </li>
-                      <li class="page-item">
-                        <a class="page-link" href="#">3</a>
-                      </li>
-                      <li class="page-item">
-                        <a class="page-link" href="#">4</a>
-                      </li>
-                      <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Next">
-                          <span aria-hidden="true">»</span>
-                          <span class="sr-only">Next</span>
-                        </a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div>
           </div>
+          <div class="col-md-4 p-3">
+            <img class="img-fluid d-block rounded-circle mx-auto" src="images/196717348_x.jpeg" width="300" height="200">
+            <p>
+              <b>The Manor At Camp John Hay</b>
+              <br>Baguio, 2.8 km to Baguio City Center</p>
+            <p>Location: &nbsp;
+              <b>Camp John Hay, Ordonio Dr, Baguio, 2600 Benguet</b>
+              <br> Price: &nbsp; </p>
+            <a class="btn btn-lg btn-primary" href="reserve.html">Reserve/Avail</a>
+            <br>
+            <br> </div>
+          <div class="col-md-4 p-3">
+            <img class="img-fluid d-block rounded-circle mx-auto" src="images/198934520_x.jpeg" width="300" height="200">
+            <p>
+              <b>Prestige - Bonbel Condominium</b>
+              <br>Baguio, 2.0 km to The Manor At Camp John Hay</p>
+            <p>Location: &nbsp;
+              <b>1 Navy Base Extension Road</b>
+              <br> Price: &nbsp; </p>
+            <a class="btn btn-lg btn-primary" href="reserve.html">Reserve/Avail</a>
+            <br>
+            <br> </div>
+          <div class="col-md-4 p-3">
+            <img class="img-fluid d-block rounded-circle mx-auto" src="images/201874276_x.jpeg" height="200" width="300">
+            <p>
+              <b>La Casa Bianca</b>
+              <br>Baguio, 1.9 km to The Manor At Camp John Hay</p>
+            <p>Location: &nbsp;
+              <b>Leonard Wood Rd, Baguio, Benguet</b>
+              <br> Price: &nbsp; </p>
+            <a class="btn btn-lg btn-primary" href="reserve.html">Reserve/Avail</a>
+            <br>
+            <br> </div>
+          <div class="col-md-4 p-3">
+            <img class="img-fluid d-block rounded-circle mx-auto" src="images/198939004_x.jpeg" height="200" width="300">
+            <p>
+              <b>Mountain Lodge</b>
+              <br>Baguio, 1.5 km to Baguio City Center</p>
+            <p>Location: &nbsp;
+              <b>27 Leonard Wood Road, Baguio, Benguet, Philippines</b>
+              <br> Price: &nbsp; </p>
+            <a class="btn btn-lg btn-primary" href="reserve.html">Reserve/Avail</a>
+            <br>
+            <br> </div>
         </div>
-        <!-- jQuery CDN -->
-        <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-        <!-- Bootstrap Js CDN -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <script type="text/javascript">
-          $(document).ready(function () {
+      </div>
+      <!-- jQuery CDN -->
+      <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+      <!-- Bootstrap Js CDN -->
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">1</script>
+      <script type="text/javascript">
+        $(document).ready(function () {
                        $('#sidebarCollapse').on('click', function () {
                            $('#sidebar').toggleClass('active');
                        });
                    });
-        </script>
-      </div>
+      </script>
     </div>
   </div>
 </body>
