--- a/Customer UI/transaction.html
+++ b/Customer UI/transaction.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Homeseek  - Transaction</title>
+  <title>Homeseek - Transaction</title>
   <!-- Bootstrap CSS CDN -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <!-- Our Custom CSS -->
@@ -47,9 +47,8 @@
       <nav class="navbar navbar-default">
         <div class="container-fluid">
           <div class="navbar-header">
-            <button type="button" id="sidebarCollapse" class="btn btn-info navbar-btn">
-              <i class="glyphicon glyphicon-align-left"></i>
-              <span>Toggle Sidebar</span>
+            <button type="button" id="sidebarCollapse" class="btn btn-primary navbar-btn">
+              <i class="glyphicon glyphicon-menu-hamburger"></i>
             </button>
           </div>
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -65,13 +64,38 @@
       <div class="py-5 bg-light mr-auto w-25">
         <div class="container">
           <div class="row">
-            <h1 class="text-center">Transaction</h1>
+            <h1 class="text-center text-uppercase text-primary">Transaction</h1>
           </div>
         </div>
         <div class="container">
           <div class="row">
-            <div class="col-md-6">Record</div>
-            <div class="col-md-6">Price</div>
+            <div class="col-md-12">
+              <c:foreach var="row" items="${result.rows}"> </c:foreach>
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th>House Name</th>
+                    <th>Date</th>
+                    <th>Remarks</th>
+                    <th>Amount</th>
+                    <th>Status</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>${row.prodid}</td>
+                    <td>${row.description}</td>
+                    <td>${row.price}</td>
+                    <td>
+                      <img src="${row.price}">
+                    </td>
+                    <td>
+                      <img src="${row.price}">
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
         </div>
         <!-- jQuery CDN -->
@@ -85,57 +109,6 @@
                        });
                    });
         </script>
-      </div>
-    <div class="bg-light text-white" id="footer">
-        <div class="container">
-          <div class="row">
-            <div class="p-4 col-md-3">
-              <h2 class="mb-4 text-secondary">ABOUT HOMESEEK</h2>
-              <p class="text-white">A website for renting any house and transients and can view and reserve where you want to stay or live.</p>
-            </div>
-            <div class="p-4 col-md-3">
-              <h2 class="mb-4 text-secondary">MAPSITE</h2>
-              <ul class="list-unstyled">
-                <a href="#" class="text-white">Home</a>
-                <br>
-                <a href="transaction.html" class="text-white">Transaction</a>
-                <br>
-                <a href="notification.html" class="text-white">Notification</a>
-                <br>
-                <a href="customer.html" class="text-white">Customer</a>
-              </ul>
-            </div>
-            <div class="p-4 col-md-3">
-              <h2 class="mb-4">CONTACT</h2>
-              <p>
-                <a href="tel:+246 - 542 550 5462" class="text-white">
-                  <i class="fa d-inline mr-3 text-secondary fa-phone"></i>+246 - 542 550 5462</a>
-              </p>
-              <p>
-                <a href="mailto:info@pingendo.com" class="text-white">
-                  <i class="fa d-inline mr-3 text-secondary fa-envelope-o"></i>info@pingendo.com</a>
-              </p>
-              <p>
-                <a href="https://goo.gl/maps/AUq7b9W7yYJ2" class="text-white" target="_blank">
-                  <i class="fa d-inline mr-3 fa-map-marker text-secondary"></i>365 Park Street, NY</a>
-              </p>
-            </div>
-            <div class="p-4 col-md-3">
-              <h2 class="mb-4 text-light">SUBSCRIBE</h2>
-              <form>
-                <fieldset class="form-group text-white">
-                  <label for="exampleInputEmail1">Get our newsletter</label>
-                  <input type="email" class="form-control" placeholder="Enter email"> </fieldset>
-                <button type="submit" class="btn btn-outline-secondary">Submit</button>
-              </form>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-12 mt-3">
-              <p class="text-center text-white">© Copyright 2018 Group 3 WebtechLab - All rights reserved.</p>
-            </div>
-          </div>
-        </div>
       </div>
     </div>
   </div>
