--- a/Customer UI/main.html
+++ b/Customer UI/main.html
@@ -52,10 +52,9 @@
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
               <li>
-                <a href="#">
-                  <input type="text" placeholder="Search..">&nbsp;
-                  <i class="glyphicon glyphicon-search"></i>
-                </a>
+                <input type="text" name="name" id="name" placeholder="Search...">
+                    <button type="submit" onclick="OpenPage()"><i class="glyphicon glyphicon-search"></i>
+                    </button>                     
               </li>
             </ul>
           </div>
