Edited customer profile

--- a/Customer UI/customer.html
+++ b/Customer UI/customer.html
@@ -55,8 +55,9 @@
             <ul class="nav navbar-nav navbar-right">
               <li>
                 <input type="text" name="name" id="name" placeholder="Search...">
-                    <button type="submit" onclick="OpenPage()"><i class="glyphicon glyphicon-search"></i>
-                    </button>                     
+                <button type="submit" onclick="OpenPage()">
+                  <i class="glyphicon glyphicon-search"></i>
+                </button>
               </li>
             </ul>
           </div>
@@ -70,15 +71,14 @@
               <img class="img-fluid d-block rounded-circle mx-auto" src="https://pingendo.github.io/templates/sections/assets/test_meow.jpg">
               <br>
               <br> </div>
-            <div class="col-md-6">
+            <div class="col-md-6 text-left">
               <p>
                 <b>Name: </b>
                 <br>
                 <b>Email Address: </b>
                 <br>
-                <b>Status: </b>
+                <b>Contact Number: </b>
                 <br> </p>
-              <a class="btn btn-primary" href="#"> Edit Profile </a>
             </div>
           </div>
         </div>
